# tiled_render_experiment

./: Cargo.toml  dbg_random_shapes.txt  table_heatmap_data.csv
assets/shaders/: custom_material_chromatic_aberration.wgsl  downscale.wgsl  rob_vertex.wgsl
src/: bbox.rs  dbg_random_shapes.txt  main.rs  path_to_poly.rs  shapes.rs  table_heatmap_data.csv  tiled_renderer.rs  types.rs  utils.rs
src/downscale/: downscaling.wgsl  mod.rs  node.rs  pipeline.rs
