[package]
name = "tiled_render_experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_prototype_lyon = "0.6.0"
bevy_pancam = "0.6.1"
crossbeam-channel = "0.5.5"
geo = "0.23.0"
csv = "1.1.6"
itertools = "0.10.3"
rand = "0.8.5"

[dependencies.bevy]
version = "0.8.0"
default-features = false
features = ["bevy_winit", "render"]

[target.'cfg(unix)'.dependencies.bevy]
version = "0.8.0"
default-features = false
features = ["bevy_winit", "render", "x11", "dynamic"]

[profile.dev.package."*"]
opt-level = 1

# [profile.release]
# debug = true
