[package]
name = "tiled_render_experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_prototype_lyon = "0.6.0"
bevy_pancam = "0.6.1"
crossbeam-channel = "0.5.5"
futures-lite = "1.12.0"
vlsir = "1.0.0"
layout21 = { git = "https://github.com/colepoirier/Layout21" }
geo = "0.23.0"
csv = "1.1.6"
itertools = "0.10.3"

[profile.dev.package.layout21]
opt-level = 3

[profile.dev.package."*"]
opt-level = 1

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = ["bevy_winit", "render", "bevy_asset"]

[target.'cfg(unix)'.dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
    "bevy_winit",
    "render",
    "x11",
    "bevy_asset",
    # "dynamic"
]

# [profile.release]
# debug = true
